GET flight requires for Flight with params in query
